--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Timo\AppData\Local\Temp\testng-eclipse--1924592262\testng-customsuite.xml</span>
+                    <span>C:\Users\Timo\AppData\Local\Temp\testng-eclipse-933282347\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.AddProductToCartTestCase" hash-for-method="AddProductToCart">AddProductToCart</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.CreateNewAddressTestCase" hash-for-method="UserCanloginSuccessfully">UserCanloginSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.AddProductToCartTestCase" hash-for-method="UserCanSearchForProductSuccessfully">UserCanSearchForProductSuccessfully</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.CreateNewAddressTestCase" hash-for-method="YourAccount">YourAccount</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.AddProductToCartTestCase</span>
+              <span class="class-name">tests.CreateNewAddressTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddProductToCart">
-                  </a> <!-- AddProductToCart -->
-                  <span class="method-name">AddProductToCart</span>
+                  <a name="UserCanloginSuccessfully">
+                  </a> <!-- UserCanloginSuccessfully -->
+                  <span class="method-name">UserCanloginSuccessfully</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="UserCanSearchForProductSuccessfully">
-                  </a> <!-- UserCanSearchForProductSuccessfully -->
-                  <span class="method-name">UserCanSearchForProductSuccessfully</span>
+                  <a name="YourAccount">
+                  </a> <!-- YourAccount -->
+                  <span class="method-name">YourAccount</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Timo\AppData\Local\Temp\testng-eclipse--1924592262\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Timo\AppData\Local\Temp\testng-eclipse-933282347\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.AddProductToCartTestCase&quot;/&gt;
+      &lt;class name=&quot;tests.CreateNewAddressTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,18 +198,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'UserCanSearchForProductSuccessfully')
-data.setCell(0, 2, 'tests.AddProductToCartTestCase')
-data.setCell(0, 3, 7503);
+data.setCell(0, 1, 'UserCanloginSuccessfully')
+data.setCell(0, 2, 'tests.CreateNewAddressTestCase')
+data.setCell(0, 3, 4998);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'AddProductToCart')
-data.setCell(1, 2, 'tests.AddProductToCartTestCase')
-data.setCell(1, 3, 1183);
+data.setCell(1, 1, 'YourAccount')
+data.setCell(1, 2, 'tests.CreateNewAddressTestCase')
+data.setCell(1, 3, 4373);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,30 +235,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.AddProductToCartTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.CreateNewAddressTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">Startdriver(firefox)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">UserCanSearchForProductSuccessfully</span>
-                <span class="method-start">23267 ms</span>
+                <span class="method-name">UserCanloginSuccessfully</span>
+                <span class="method-start">12665 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=UserCanSearchForProductSuccessfully status=SUCCESS method=AddProductToCartTestCase....)</span>
-                <span class="method-start">30773 ms</span>
+                <span class="method-name">failtestcase([TestResult name=UserCanloginSuccessfully status=SUCCESS method=CreateNewAddressTestCase.UserCanlogi...)</span>
+                <span class="method-start">17670 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">AddProductToCart</span>
-                <span class="method-start">30776 ms</span>
+                <span class="method-name">YourAccount</span>
+                <span class="method-start">17714 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=AddProductToCart status=SUCCESS method=AddProductToCartTestCase.AddProductToCart()[...)</span>
-                <span class="method-start">31961 ms</span>
+                <span class="method-name">failtestcase([TestResult name=YourAccount status=SUCCESS method=CreateNewAddressTestCase.YourAccount()[pri:2, ins...)</span>
+                <span class="method-start">22089 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">StopDriver</span>
-                <span class="method-start">32100 ms</span>
+                <span class="method-start">22216 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
